[gd_scene format=3 uid="uid://dvp4flog61jjd"]

[ext_resource type="Script" uid="uid://cqyhd7rayxr3g" path="res://main_game/spit_screen.gd" id="1_1142w"]
[ext_resource type="PackedScene" uid="uid://3iselbpvlq0y" path="res://main_game/MainGame.tscn" id="2_f4b40"]

[node name="SpitScreen" type="Control" unique_id=498784060]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1142w")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=302217450]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer" unique_id=242427524]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer" unique_id=994697696]
handle_input_locally = false
size = Vector2i(638, 720)
render_target_update_mode = 4

[node name="MainGame" parent="HBoxContainer/SubViewportContainer/SubViewport" unique_id=1780440313 instance=ExtResource("2_f4b40")]

[node name="SubViewportContainer2" type="SubViewportContainer" parent="HBoxContainer" unique_id=528254201]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport2" type="SubViewport" parent="HBoxContainer/SubViewportContainer2" unique_id=1197239889]
handle_input_locally = false
size = Vector2i(638, 720)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=112051585]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer" unique_id=918142653]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer/CenterContainer" unique_id=307514615]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/CenterContainer/SubViewportContainer" unique_id=1062316975]
size = Vector2i(300, 300)

[node name="Camera2D" type="Camera2D" parent="CanvasLayer/CenterContainer/SubViewportContainer/SubViewport" unique_id=1560877012]
position = Vector2(1000, 1000)
zoom = Vector2(0.15, 0.15)
